Horizontal scrollbar bugfix (caused by animation)

--- a/scss/modules/_all.scss
+++ b/scss/modules/_all.scss
@@ -1,2 +1,6 @@
 @import 'landingpage';
 @import 'animate';
+
+body {
+    overflow-x: hidden;
+}
